# gemma-investigation

./: .gitignore  README.md  SETUP_COMPLETE.md  download_gemma_it.py  investigate_gemma.ipynb  investigate_qwen copy.ipynb  investigate_qwen.ipynb  load_gemma_it_cell.py  load_gemma_model.py  load_model_cell.py  pyproject.toml  requirements.txt
.venv-backups/27186070/: venv-main-latest.txt
